force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/JSON_Mapping_Section__mdt.object-meta.xml
<CustomObject>
    <label>JSON Mapping Section</label>
    <pluralLabel>JSON Mapping Sections</pluralLabel>
</CustomObject>