force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Mapping_Set__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Set__c</fullName>
    <label>Mapping Set</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description
  >Mapping set this section belongs to. Must match the Mapping_Set__c of the rules that reference it.</description>
</CustomField>