force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Match_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Field__c</fullName>
    <label>Match Field</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Repeating sections only: field that identifies a row, e.g. SerialNumber or an External Id. Any queryable field works, because rows are matched with a SOQL query. A true External Id is only required once the engine gains the ability to create rows.</description>
</CustomField>