force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <label>Match Value</label>
    <type>Text</type>
    <length>255</length>
    <description
  >Repeating sections only: template producing each row's Match Field value. Tokens: {json:path} reads from the document root, {row:path} from the current row, {row:index} is 0-based and {row:number} 1-based. Example: INV-{json:Invoice}-{row:number}.</description>
</CustomField>