force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section__c</fullName>
    <label>Parent Section</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Section Name whose record constrains this one: rows must look up to it. Leave blank to discover the constraint from the schema against any resolved record. Reserved for nesting in a later version.</description>
</CustomField>