force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Record_Filter__c.field-meta.xml
<CustomField>
    <fullName>Record_Filter__c</fullName>
    <label>Record Filter</label>
    <type>Text</type>
    <length>255</length>
    <description
  >Optional extra WHERE fragment narrowing the records this section may touch, e.g. Status != 'Obsolete'. {json:path} tokens are bound from the reviewed JSON. Supersedes Anchor_Filter__c on individual rules.</description>
</CustomField>