force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Row_Path__c.field-meta.xml
<CustomField>
    <fullName>Row_Path__c</fullName>
    <label>Row Path</label>
    <type>Text</type>
    <length>255</length>
    <description
  >Repeating sections only: JSON path to the array of rows, e.g. Details. Each rule's JSON Path is then read relative to one element.</description>
</CustomField>