force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description
  >Name rules point at through their Section__c field. Unique within a mapping set.</description>
</CustomField>