force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_Type__c</fullName>
    <label>Section Type</label>
    <type>Picklist</type>
    <description
  >Fixed regions (header, footer) map to one record. Repeating regions (detail lines) map each element of Row Path to its own record.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Repeating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>