force-app/idp/main/default/objects/JSON_Mapping_Section__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description
  >API name of the object this section writes to. Rules attached to the section inherit it.</description>
</CustomField>